...
    <string name="wizard_introduction">If you haven\'t already done so, register on the Cacophony website and create a group.</string>
    <string name="choose_mode_message">Select a mode to override the options selected in settings (uses most appropriate values).</string>
    <string name="location_not_set">GPS Location not set.</string>
    <string name="update_gps_location">Update GPS Location</string>

    <string name="help">Help</string>
    <string name="settings">Settings</string>


    <string name="device_id">Device ID:</string>

    <string name="gps_text">GPS location: </string>
    <string name="message_text">Messages: </string>message_text
...
    <string name="registered_true">Registered: ✔</string>
    <string name="registered_false">Registered: ✘</string>
    <string name="logged_in_to_server_true">Logged in to server: ✔</string>
    <string name="logged_in_to_server_false">Logged in to server: ✘</string>
    <string name="required_permissions_true">Required Permissions: ✔</string>
    <string name="required_permissions_false">Required Permissions: ✘</string>
    <string name="not_registered">Device not registered.</string>

    <string name="keep_recording_with_a_low_battery">Keep recording with a low battery?  Swipe to next screen when ready.</string>


    <string name="help_setup">Setup your phone</string>

...
